--- a/css/drugs_sect.css
+++ b/css/drugs_sect.css
@@ -13,66 +13,86 @@ main .header {
 main .header h1 {
   font-weight: 300;
 }
-main .row1 {
+main .importance {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   padding: 40px;
   font-family: "Archivo", sans-serif;
 }
-main .row1 h2 {
-  width: 70%;
+main .importance h2 {
+  width: 90%;
+  margin-bottom: 30px;
   font-size: 3rem;
   font-weight: 300;
   color: #003d72;
 }
-main .row1 p {
-  width: 50%;
-  margin-top: 30px;
+main .importance p {
+  width: 60%;
   font-size: 1.2rem;
 }
-main .row1 div:nth-of-type(2) {
+main .importance div:nth-of-type(2) {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-main .row2 {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  padding: 40px;
+main .carousel-container {
+  padding: 30px 80px;
   font-family: "Archivo", sans-serif;
-  text-align: right;
-}
-main .row2 div:nth-of-type(1) {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-main .row2 div:nth-of-type(2) {
-  position: relative;
-}
-main .row2 div:nth-of-type(2) img {
-  position: absolute;
-  z-index: -1;
-  height: 150%;
-  right: -200px;
-  bottom: -150px;
-}
-main .row2 h2 {
-  font-size: 3rem;
-  font-weight: 300;
   color: #003d72;
-}
-main .row2 p {
-  margin-top: 30px;
-  font-size: 1.2rem;
-}
-main .carousel {
-  font-family: "Archivo", sans-serif;
+  text-align: center;
   background-color: #f4f4ec;
 }
-main .carousel h3 {
+main .carousel-container h3 {
   font-size: 2rem;
   font-weight: 300;
+  letter-spacing: 10px;
+}
+main .carousel-container p {
+  width: 80%;
+  margin: 0 auto;
+  font-size: 1.3rem;
+}
+main .carousel-container .container {
+  position: relative;
+  padding: 40px 40px 0;
+}
+main .carousel-container .container span {
+  position: absolute;
+  z-index: 999;
+  padding: 5px;
+  font-size: 1.8rem;
+  color: white;
+  background-color: #003d72;
+  border-radius: 50%;
+  translate: 0 -50%;
+  cursor: pointer;
+}
+main .carousel-container .container span:nth-of-type(1) {
+  top: 50%;
+  left: -10px;
+}
+main .carousel-container .container span:nth-of-type(2) {
+  top: 50%;
+  right: -10px;
+}
+main .carousel-container .carousel {
+  display: flex;
+  gap: 5%;
+  width: 100%;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+main .carousel-container .carousel figure {
+  flex: 0 0 auto;
+  background-color: rgba(67, 157, 215, 0.4705882353);
+  width: 30%;
+  min-height: 60%;
+  padding: 15px;
+}
+main .carousel-container .carousel figure img {
+  width: 90%;
+  height: 80%;
+  margin-bottom: 10px;
 }
 
 /*# sourceMappingURL=drugs_sect.css.map */
