--- a/scss/drugs_sect.scss
+++ b/scss/drugs_sect.scss
@@ -18,19 +18,19 @@ main {
     }
   }
 
-  .row1 {
+  .importance {
     @include m.elements_grid(2);
     padding: 40px;
     font-family: f.$archivo;
     h2 {
-      width: 70%;
+      width: 90%;
+      margin-bottom: 30px;
       font-size: 3rem;
       font-weight: 300;
       color: c.$font-color4;
     }
     p {
-      width: 50%;
-      margin-top: 30px;
+      width: 60%;
       font-size: 1.2rem;
     }
     div:nth-of-type(2) {
@@ -40,45 +40,63 @@ main {
     }
   }
 
-  .row2 {
-    @include m.elements_grid(2);
-    padding: 40px;
+  .carousel-container {
+    padding: 30px 80px;
     font-family: f.$archivo;
-    text-align: right;
-    div:nth-of-type(1) {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    div:nth-of-type(2) {
-      position: relative;
-      img {
-        position: absolute;
-        z-index: -1;
-        height: 100% + 50%;
-        right: -200px;
-        bottom: -150px;
-      }
-    }
-    h2 {
-      // width: 70%;
-      font-size: 3rem;
-      font-weight: 300;
-      color: c.$font-color4;
-    }
-    p {
-      // width: 50%;
-      margin-top: 30px;
-      font-size: 1.2rem;
-    }
-  }
-
-  .carousel {
-    font-family: f.$archivo;
+    color: c.$font-color4;
+    text-align: center;
     background-color: c.$carousel_drugs;
     h3 {
       font-size: 2rem;
       font-weight: 300;
+      letter-spacing: 10px;
+    }
+    p {
+      width: 80%;
+      margin: 0 auto;
+      font-size: 1.3rem;
+    }
+    .container {
+      position: relative;
+      padding: 40px 40px 0;
+      span {
+        position: absolute;
+        z-index: 999;
+        padding: 5px;
+        font-size: 1.8rem;
+        color: c.$font-color2;
+        background-color: c.$carousel-btn-bgc;
+        border-radius: 50%;
+        translate: 0 -50%;
+        cursor: pointer;
+        &:nth-of-type(1) {
+          top: 50%;
+          left: -10px;
+        }
+        &:nth-of-type(2) {
+          top: 50%;
+          right: -10px;
+        }
+      }
+    }
+    .carousel {
+      display: flex;
+      gap: 5%;
+      width: 100%;
+      overflow-x: hidden;
+      scroll-behavior: smooth;
+      figure {
+        flex: 0 0 auto;
+        background-color: c.$carousel-item-bgc;
+        width: 30%;
+        min-height: 60%;
+        padding: 15px;
+        img {
+          width: 90%;
+          height: 80%;
+          margin-bottom: 10px;
+        }
+      }
     }
   }
 }
