--- a/css/drugs_sect.css
+++ b/css/drugs_sect.css
@@ -75,24 +75,49 @@ main .carousel-container .container span:nth-of-type(2) {
   top: 50%;
   right: -10px;
 }
-main .carousel-container .carousel {
+main .carousel-container .container .carousel {
   display: flex;
   gap: 5%;
   width: 100%;
   overflow-x: hidden;
   scroll-behavior: smooth;
 }
-main .carousel-container .carousel figure {
+main .carousel-container .container .carousel a {
   flex: 0 0 auto;
   background-color: rgba(67, 157, 215, 0.4705882353);
   width: 30%;
   min-height: 60%;
   padding: 15px;
 }
-main .carousel-container .carousel figure img {
+main .carousel-container .container .carousel a img {
   width: 90%;
   height: 80%;
   margin-bottom: 10px;
+}
+main .carousel-container .container .carousel a figcaption {
+  color: black;
+}
+main .benefits {
+  padding: 70px 0 70px 70px;
+  font-family: "Archivo", sans-serif;
+}
+main .benefits h2 {
+  width: 70%;
+  margin: 0 auto 150px;
+  color: #003d72;
+  font-size: 3rem;
+  font-weight: 300;
+  text-align: center;
+}
+main .benefits div {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 80px;
+  width: 100%;
+}
+main .benefits p {
+  width: 90%;
+  font-size: 1.2rem;
 }
 
 /*# sourceMappingURL=drugs_sect.css.map */
