--- a/css/drugs_sect.css
+++ b/css/drugs_sect.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Anton&family=Archivo:wght@300;400;700;900&family=Passion+One:wght@400;700;900&display=swap");
+header .selected a::after {
+  width: 100%;
+}
+
 main .header {
   padding: 100px 0;
   font-size: 4rem;
