--- a/scss/drugs_sect.scss
+++ b/scss/drugs_sect.scss
@@ -2,6 +2,16 @@
 @use "fonts" as f;
 @use "mixins" as m;
 
+header {
+  .selected {
+    a {
+      &::after {
+        width: 100%;
+      }
+    }
+  }
+}
+
 main {
   .header {
     padding: 100px 0;
