--- a/css/hot_drugs.css
+++ b/css/hot_drugs.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Anton&family=Archivo:wght@300;400;700;900&family=Passion+One:wght@400;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Anton&family=Archivo:wght@300;400;700;900&family=Passion+One:wght@400;700;900&display=swap");
 main .header {
   display: flex;
   justify-content: center;
@@ -82,6 +83,56 @@ main .drugs .container .carousel span img {
 main .drugs .container .carousel span p {
   color: black;
 }
+@media (max-width: 870px) {
+  main .drugs .container {
+    position: relative;
+    padding: 40px 40px 0;
+  }
+  main .drugs .container .material-symbols-rounded {
+    position: absolute;
+    z-index: 99;
+    padding: 5px;
+    font-size: 1.8rem;
+    color: white;
+    background-color: #003d72;
+    border-radius: 50%;
+    translate: 0 -50%;
+    cursor: pointer;
+  }
+  main .drugs .container .material-symbols-rounded:nth-of-type(1) {
+    top: 50%;
+    left: -10px;
+  }
+  main .drugs .container .material-symbols-rounded:nth-of-type(2) {
+    top: 50%;
+    right: -10px;
+  }
+  main .drugs .container .carousel {
+    display: flex;
+    gap: 5%;
+    width: 100%;
+    overflow: hidden;
+    scroll-behavior: smooth;
+  }
+  main .drugs .container .carousel span {
+    flex: 0 0 auto;
+    background-color: rgba(67, 157, 215, 0.4705882353);
+    width: 47.5%;
+    height: 200px;
+    padding: 0px;
+  }
+  main .drugs .container .carousel span figure {
+    padding-top: 10px;
+  }
+  main .drugs .container .carousel span img {
+    width: 90%;
+    height: 80%;
+    margin-bottom: 10px;
+  }
+  main .drugs .container .carousel span p {
+    color: black;
+  }
+}
 main .drugs .container span {
   position: relative;
   z-index: 1;
@@ -114,6 +165,173 @@ main .drugs .container p .fa-star {
 main .drugs .container p .fa-star:hover {
   color: #1c3249;
   transform: scale(1.2);
+}
+
+@media (max-width: 870px) {
+  main .header {
+    display: flex;
+    justify-content: space-between;
+    justify-items: center;
+    align-items: center;
+    gap: 30px;
+    padding: 50px 0;
+    background-color: #1c3249;
+  }
+  main .header img {
+    height: 20vh;
+    margin: 0;
+  }
+  main .header h1 {
+    color: white;
+    font-family: "Archivo", sans-serif;
+    font-size: 24px;
+    font-weight: 300;
+    letter-spacing: 20px;
+  }
+  main .drugs {
+    margin-top: 50px;
+  }
+  main .drugs h2 {
+    margin-left: 30px;
+    margin-bottom: 30px;
+    color: #1c3249;
+    font-family: "Archivo", sans-serif;
+    font-size: 32px;
+    font-weight: 300;
+    letter-spacing: 10px;
+  }
+  main .drugs hr {
+    width: 100%;
+    background-color: #1c3249;
+    height: 3px;
+  }
+  main .drugs .carousel-container {
+    padding: 0 20px 10px;
+    text-align: center;
+  }
+  main .drugs .container {
+    position: relative;
+    padding: 40px 40px 0;
+  }
+  main .drugs .container .material-symbols-rounded {
+    position: absolute;
+    z-index: 99;
+    padding: 5px;
+    font-size: 1.8rem;
+    color: white;
+    background-color: #003d72;
+    border-radius: 50%;
+    translate: 0 -50%;
+    cursor: pointer;
+  }
+  main .drugs .container .material-symbols-rounded:nth-of-type(1) {
+    top: 50%;
+    left: -10px;
+  }
+  main .drugs .container .material-symbols-rounded:nth-of-type(2) {
+    top: 50%;
+    right: -10px;
+  }
+  main .drugs .container .carousel {
+    display: flex;
+    gap: 5%;
+    width: 100%;
+    overflow: hidden;
+    scroll-behavior: smooth;
+  }
+  main .drugs .container .carousel span {
+    flex: 0 0 auto;
+    background-color: rgba(67, 157, 215, 0.4705882353);
+    width: 30%;
+    min-height: 60%;
+    padding: 15px;
+  }
+  main .drugs .container .carousel span img {
+    width: 90%;
+    height: 80%;
+    margin-bottom: 10px;
+  }
+  main .drugs .container .carousel span p {
+    color: black;
+  }
+}
+@media (max-width: 870px) and (max-width: 870px) {
+  main .drugs .container {
+    position: relative;
+    padding: 40px 40px 0;
+  }
+  main .drugs .container .material-symbols-rounded {
+    position: absolute;
+    z-index: 99;
+    padding: 5px;
+    font-size: 1.8rem;
+    color: white;
+    background-color: #003d72;
+    border-radius: 50%;
+    translate: 0 -50%;
+    cursor: pointer;
+  }
+  main .drugs .container .material-symbols-rounded:nth-of-type(1) {
+    top: 50%;
+    left: -10px;
+  }
+  main .drugs .container .material-symbols-rounded:nth-of-type(2) {
+    top: 50%;
+    right: -10px;
+  }
+  main .drugs .container .carousel {
+    display: flex;
+    gap: 5%;
+    width: 100%;
+    overflow: hidden;
+    scroll-behavior: smooth;
+  }
+  main .drugs .container .carousel span {
+    flex: 0 0 auto;
+    background-color: rgba(67, 157, 215, 0.4705882353);
+    width: 47.5%;
+    height: 200px;
+    padding: 0px;
+  }
+  main .drugs .container .carousel span figure {
+    padding-top: 10px;
+  }
+  main .drugs .container .carousel span img {
+    width: 90%;
+    height: 80%;
+    margin-bottom: 10px;
+  }
+  main .drugs .container .carousel span p {
+    color: black;
+  }
+}
+@media (max-width: 870px) {
+  main .drugs .container span {
+    position: relative;
+    z-index: 1;
+  }
+  main .drugs .container p {
+    position: static;
+    opacity: 1;
+    width: 100%;
+    height: 50%;
+    padding: 10px;
+    color: rgba(28, 50, 73, 0.4196078431);
+    font-family: "Archivo", sans-serif;
+    background-color: rgba(255, 255, 255, 0.6);
+    transition: all 0.5s;
+  }
+  main .drugs .container p .fa-star {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    color: #003d72;
+    font-size: 24px;
+  }
+  main .drugs .container p .fa-star:hover {
+    color: #1c3249;
+    transform: scale(1.2);
+  }
 }
 
 /*# sourceMappingURL=hot_drugs.css.map */
