--- a/css/drugs_sect.css
+++ b/css/drugs_sect.css
@@ -15,7 +15,7 @@ main .header h1 {
 main .importance {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  padding: 40px;
+  padding: 40px 100px;
   font-family: "Archivo", sans-serif;
 }
 main .importance h2 {
@@ -108,14 +108,19 @@ main .benefits h2 {
   font-weight: 300;
   text-align: center;
 }
-main .benefits div {
+main .benefits section {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   column-gap: 80px;
   width: 100%;
 }
+main .benefits h3 {
+  margin-bottom: 10px;
+  text-align: center;
+  font-size: 2rem;
+  color: #003d72;
+}
 main .benefits p {
-  width: 90%;
   font-size: 1.2rem;
 }
 
